panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__test_error_definition_of_array_of_unknown_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/test_error_definition_of_array_of_unknown_size.c
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot declare variable `xs` with incomplete type `array<int; ∅>`
   ╭─[panko/tests/cases/test_error_definition_of_array_of_unknown_size.c:2:9]
   │
 2 │     int xs[];
   │         ─┬  
   │          ╰── declared here
───╯
